# proverb

./: Cargo.toml  README.md  build.rs  install.sh
.cargo/: config
parcel/: Cargo.toml
parcel/src/: main.rs
proverb/: touhou
proverb/src/: main.rs
proverb_files/: touhou
src/: main.rs
xtask/: Cargo.toml
xtask/src/: cmd.rs  install.rs  main.rs  man_pages.rs
